# TrafficAccidentSeverity

./: CONVENTIONS.md  Product Requirements Document.md  Task Breakdown.md  ai_report.md  pyproject.toml  requirements.txt  tasks.md
data/processed/: PT-M1-CASTRO_KirvinJosh-2.docx
models/: adaboost_best_model.joblib  decision_tree_model.joblib  decision_tree_scaler.joblib  lightgbm_best_model.joblib  logistic_regression_best_model.pkl  logistic_regression_model.joblib  xgboost_best_model.joblib
notebooks/: 00_data_ingestion_and_initial_exploration.ipynb  01_initial_data_exploration.ipynb  01_target_variable_definition.ipynb  02_data_preprocessing.ipynb  03_exploratory_data_analysis.ipynb  04_modeling_pipeline_setup.ipynb  05_model_logistic_regression.ipynb  05_model_logistic_regression_1.ipynb  06_model_decision_tree.ipynb  07_model_random_forest.ipynb  08_model_lightgbm.ipynb  09_model_xgboost.ipynb  10_model_bagging_classifier.ipynb  11_model_adaboost.ipynb  12_feature_importance_analysis.ipynb  13_results_summary_and_visualization.ipynb
outputs/: final project status report.txt  reference.txt
reports/: EDSA_Traffic_Accident_Forecasting_Report.md  model_performance_summary.xlsx  severity_column_initial_findings.md
src/: modeling_utils.py  preprocessing_utils.py
